fix aria2 torrent and refresh media injection